Make sure add-news and scroll-to-top do not overlap
It would be nicer to do this dynamically on display of
scroll to top, but for that we'd need something like a global floating
action button handler.
Hence only admins see the add button I consider this an okay
solution.

--- a/rtg/src/components/news/News.scss
+++ b/rtg/src/components/news/News.scss
@@ -7,7 +7,7 @@
 
   &__add-button {
     position: sticky;
-    padding: 0 24px 24px;
+    padding: 0 24px 95px;
     bottom: 0;
 
     text-align: right;
